# abdelrahman-portfolio

./: .gitattributes  .gitignore  LICENSE  README.md  _config.yml  index.html
_docs/: index.html
_layouts/: default.html
_projects/: update-descriptions.py
_projects/01-glider-design/: index.md
_projects/02-aquaponics-design/: index.md
_projects/03-joukowski-airfoil-tool/: index.md
_projects/04-rocket-part-cad-cam/: index.md
_projects/05-cpp-shape-matching-game/: index.md
_projects/05-cpp-shape-matching-game/config/: CMakeLists.txt  Makefile
_projects/06-cpp-hospital-ambulance/: Makefile  index.md  sample_input.txt
_projects/07-gearbox-design/: Gearbox Assembly.stp  index.md
_projects/08-cold-plate-topopt/: index.md
_projects/09-aircraft-pitch-control/: index.md
_projects/10-juice-orbital-analysis/: index.md
_projects/11-naca0015-cfd-study/: index.md
_projects/12-simplex-method-implementation/: index.md
_projects/13-child-development-program-website/: index.md
docs/: index.html
projects/01-glider-design/: README.md
projects/02-aquaponics-design/: README.md
projects/03-joukowski-airfoil-tool/: README.md
projects/04-rocket-part-cad-cam/: README.md
projects/05-cpp-shape-matching-game/: README.md
projects/06-cpp-hospital-ambulance/: README.md
projects/07-gearbox-design/: Gearbox Assembly.stp  README.md
projects/08-cold-plate-topopt/: README.md
projects/09-aircraft-pitch-control/: README.md
projects/10-juice-orbital-analysis/: README.md
projects/11-NACA0015 CFD Study/: README.md
projects/11-naca0015-cfd-study/: README.md
(+97 files in other folders)
